--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,22 @@
 language: rust
-cache: cargo
-sudo: true
+sudo: false
+dist: trusty
+
+cache:
+  cargo: true
 
 rust:
+  - stable
+  - beta
   - nightly
 
+matrix:
+  allow_failures:
+    - rust: nightly
+
 script:
-  - cargo build --verbose
+  - cargo build --no-default-features
 
 env:
   global:
-    - RUSTFLAGS="-C link-dead-code"
     - TRAVIS_RUST_VERSION="1.25.0
