--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 authors = ["Etherswap.io <admin@etherswap.io>"]
 
 [dependencies]
-ethereum-types = "0.2.0"
+ethereum-types = { version = "0.2", features = ["use_asm"]}
 fixed-hash = "0.1.2"
 rustc-serialize = "0.3"
 serde = "1.0.23"
