--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,4 +10,5 @@ rustc-serialize = "0.3"
 serde = "1.0.23"
 serde_derive = "1.0.23"
 serde_json = "1.0.8"
+twox-hash = "1.1.0"
 web3 = { version = "0.2.0", git = "https://github.com/tomusdrw/rust-web3.git" }
