--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,9 +4,11 @@ version = "0.1.0"
 authors = ["Etherswap.io <admin@etherswap.io>"]
 
 [dependencies]
+bigdecimal = "0.0.10"
 ethereum-types = { version = "0.2", features = ["use_asm"]}
 fixed-hash = "0.1.2"
 lazy_static = "1.0"
+num = "0.1"
 rustc-serialize = "0.3"
 serde = "1.0.23"
 serde_derive = "1.0.23"
