--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ authors = ["Etherswap.io <admin@etherswap.io>"]
 
 [dependencies]
 bigdecimal = "0.0.10"
+error-chain = "0.11.0"
 ethereum-types = { version = "0.2", features = ["use_asm"]}
 fixed-hash = "0.1.2"
 lazy_static = "1.0"
